--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/blogpost" # the subpath of your site, e.g. /blog
 url: "https://jhaoheng.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  maxhu
+#twitter_username: jekyllrb
+github_username:  jhaoheng
 
 # Build settings
 markdown: kramdown
