--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Max 乎~
-description:      請多支持!
-disqus_shortname: blogpost-5
+description:      修煉!
+# disqus_shortname: blogpost-5
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
