--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,8 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..6
   enable_coderay: false
+  input: GFM
+  syntax_highlighter_opts: "{'default_lang':'html'}"
 
 include: 
   - .htaccess
