--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # ---------------------------------------------------------------
 
 # Site
-title: MAX HU
+title: MAX 呼~
 subtitle: Spare No Effort, Leave No Regret
 description: Welcome!
 author: Max Hu
